# gemrb

./: CMakeLists.txt
gemrb/plugins/OpenALAudio/: CMakeLists.txt
gemrb/plugins/SDLVideo/: CMakeLists.txt  GLTextureSprite2D.cpp  SDL20GLVideo.cpp  SDL20Video.cpp  Shader.cpp
