INCLUDE_DIRECTORIES( ${SDL2_INCLUDE_DIR} )

ADD_DEFINITIONS("-DUSE_GL")
ADD_GEMRB_PLUGIN (SDLVideo COCOA SDLVideo.cpp SDL20Video.cpp SDL20GLVideo.cpp SDLSurfaceSprite2D.cpp Shader.cpp Matrix.cpp GLTextureSprite2D.cpp)
TARGET_LINK_LIBRARIES( SDLVideo ${SDL2_LIBRARY} ${OPENGL_LIBRARY} ${GLEW_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} ${COCOA_LIBRARY_PATH})
